--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
         </section>
         <aside>
 
-
         </aside>
-
-        
     </main>
     <footer>
         
     </footer>
-   <script src="/mail.js"></script> 
+   <script src="/main.js"></script> 
 </body>
 </html>
