--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -28,6 +28,6 @@
     <footer>
         
     </footer>
-   <script src="/main.js"></script> 
+    <script src="/assets/js/main.js" type="module"></script>
 </body>
 </html>
