añadido 1 template y referencia de concepto de diseño

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header class="header">
         <nav class="">
             <ul class="list">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="">qwd</a></li>
+                <li><a href="">qwd</a></li>
             </ul>
         </nav>
-
     </header>
     <main class="main">
         <section>
@@ -28,6 +27,27 @@
     <footer>
         
     </footer>
+    <!--
+        Este template contendrá el producto que será cargado con Js y dibujado en la sección izquierda de la pantalla.
+
+        Modificar si es necesario.
+    -->    
+    <template>
+        <div class="???" data-id="-1">
+            <!-- Nombre del producto -->
+            <div><h2></h2></div>
+            <!-- Imagen del producto -->
+            <div><img src="" alt=""></div>
+            <!-- Descripción del producto -->
+            <div><p></p></div>
+            <!-- Botones que realizarán las acciones (Under construction xd) -->
+            <div>
+
+            </div>
+        </div>
+    </template>
+
+    <!-- Añadir otro template con el diseño de un item en la lista de compra del carrito -->
     <script src="/assets/js/main.js" type="module"></script>
 </body>
 </html>
