+productos, +js, +comentarios

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
     <main class="main">
         <section>
-
+            <!-- Sección en la que se dibujan los productos -->
         </section>
         <aside>
-
+            <!-- Sección en la que se dibujan los productos del carrito (los que se van a comprar) -->
         </aside>
     </main>
     <footer>
