--- a/index.html
+++ b/index.html
@@ -1,33 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tienda</title>
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/ccs/style.css">
+
 </head>
 <body>
-    <header class="header">
-        <nav class="">
-            <ul class="list">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </nav>
+  <header class="cabezera">
+    <nav class="nav">
+      <span>logo</span>
+      <ul class="ul">
+        <li>Academlo</li>
+        <li>Tienda de Autos</li>
+      </ul>
+    </nav>
+  </header>
+  <h1 class="titulo">Autos Disponibles</h1>
 
-    </header>
-    <main class="main">
-        <section>
-
-        </section>
-        <aside>
-
-        </aside>
+  <div class="contenedor__principal">
+    <main class="contenedor__productos">
+      <h2>Productos:</h2>
+      
+      <section id="items" class="productos"></section>
     </main>
-    <footer>
-        
-    </footer>
-   <script src="/main.js"></script> 
+
+    <asside class="contenedor__carrito">
+      <h2>Carrito:</h2>
+      <div id="articulosContenedor" class="articulos"></div>
+    </asside>
+  </div>
+  <template id="template-footer">
+    <th scope="row" colspan="2">Total productos</th>
+    <td>10</td>
+    <td>
+        <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+            vaciar todo
+        </button>
+    </td>
+    <td class="font-weight-bold">$ <span>5000</span></td>
+</template>
+  <template id="template-carrito">
+    <tr>
+      <th scope="row">id</th>
+      <td>Café</td>
+      <td>1</td>
+      <td>
+          <button class="btn btn-info btn-sm">
+              +
+          </button>
+          <button class="btn btn-danger btn-sm">
+              -
+          </button>
+      </td>
+      <td>$ <span>500</span></td>
+    </tr>
+  </template>
+  
+  <template id="template-card">
+    <div class="col-12 mb-2 col-md-4">
+      <div class="card">
+        <img src="" alt="" class="img-card-top">
+        <div class="card-body">
+          <h5>Titulo</h5>
+          <p>precio</p>
+          <button class="btn btn-dark">Comprar</button>
+        </div>
+      </div>
+    </div>
+  </template>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
