--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Modificar si es necesario.
     -->    
     <template>
-        <div class="???" data-id="-1">
+        <div class="product">
             <!-- Nombre del producto -->
             <div><h2></h2></div>
             <!-- Imagen del producto -->
