--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <body>
 
     <header class="cabezera">
-      <nav class="nav">
+      <nav class="nav navbar navbar-expand-lg bg-light">
         <span>logo</span>
-        <ul class="ul">
-          <li>Academlo</li>
-          <li>Tienda de Autos</li>
+        <ul class="ul  mb-2 mb-lg-0">
+          <li class="nav-item"><a href="#">Home</a></li>
+          <li class="nav-item"><a href="#">Productos</a></li>
+          <li class="nav-item"><a href="#">Acerca de</a></li>
+          <li class="nav-item"><a href="#">Contactos</a></li>
         </ul>
       </nav>
     </header>
