--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <!-- CSS only -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
@@ -13,7 +14,7 @@
 
     <header class="cabezera">
       <nav class="nav navbar navbar-expand-lg bg-light">
-        <span>logo</span>
+        <img src="/assets/img/logo-shop-academlo.png" alt="">
         <ul class="ul  mb-2 mb-lg-0">
           <li class="nav-item"><a href="#">Home</a></li>
           <li class="nav-item"><a href="#">Productos</a></li>
@@ -22,7 +23,7 @@
         </ul>
       </nav>
     </header>
-    <h1 class="titulo">Autos Disponibles</h1>
+    <h1 class="titulo"><span><i class='bx bxs-car'></i></span> Autos Disponibles</h1>
 
 
     <div class="contenedor__principal">
@@ -33,7 +34,7 @@
       </main>
 
       <asside class="contenedor__carrito">
-        <h2>Carrito:</h2>
+        <h2><span><i class='bx bxs-store'></i></span> Carrito</h2>
         <div id="articulosContenedor" class="articulos"></div>
       </asside>
     </div>
