--- a/index.html
+++ b/index.html
@@ -13,14 +13,39 @@
   <body>
 
     <header class="cabezera">
-      <nav class="nav navbar navbar-expand-lg bg-light">
-        <img src="/assets/img/logo-shop-academlo.png" alt="">
-        <ul class="ul  mb-2 mb-lg-0">
-          <li class="nav-item"><a href="#">Home</a></li>
-          <li class="nav-item"><a href="#">Productos</a></li>
-          <li class="nav-item"><a href="#">Acerca de</a></li>
-          <li class="nav-item"><a href="#">Contactos</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <img src="/assets/img/logo-shop-academlo.png" alt="">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Envios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Precios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Acerca de Nosotros</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Productos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Deportivos</a></li>
+                  <li><a class="dropdown-item" href="#">TodoTerrenos</a></li>
+                  <li><a class="dropdown-item" href="#">Transporte</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <h1 class="titulo"><span><i class='bx bxs-car'></i></span> Autos Disponibles</h1>
@@ -79,7 +104,7 @@
         </div>
       </div>
     </template>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
