--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </asside>
     </div>
-
+<!--los template no los lee el html asi que pueden estar en cualquier lugar del documento-->
     <template id="template-footer">
       <th scope="row" colspan="2">Total productos</th>
       <td>10</td>
