--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Tienda</title>
-    <!-- CSS only -->
+
+    <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <!--Boostrap 5-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--Custom CSS-->
     <link rel="stylesheet" href="/assets/css/style.css">
+
   </head>
+
   <body>
 
     <header class="cabezera">
@@ -98,7 +104,7 @@
           </button>
       </td>
       <td class="font-weight-bold">$ <span>5000</span></td>
-    </template>
+  </template>
 
     <template id="template-carrito">
       <tr>
@@ -129,6 +135,8 @@
         </div>
       </div>
     </template>
+
+    <!--Scripts-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
   </body>
