--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
         </div>
       </div>
     </template>
-
+    <!-- ************** FOOTER******************** -->
     <div class="container">
       <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
-        <div class="col mb-3">
-          <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+        <div class="body-left col mb-3">
+          <a href="/" class="d-flex align-items-center justify-content-center mb-3 link-dark text-decoration-none">
             <img class="logo-academlo-footer" src="/assets/img/LOGO-ACADEMLO-2.png" alt="">
           </a>
           <p class="text-muted">&copy; Todo Los Derechos Reservados</p>
@@ -150,13 +150,13 @@
         </div>
     
         <div class="col mb-3">
-          <h5>Section</h5>
+          <h5>Informacion</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Productos</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Envios</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Acerca de Nosotros</a></li>
           </ul>
         </div>
     
@@ -177,7 +177,7 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Jose Cueche</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Julio Cesar</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Lucas Quiroga</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Wilhelm Janampa</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Wilhelm Castro</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Jose Fuentes</a></li>
           </ul>
         </div>
