--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="contenedor__principal">
       <main class="contenedor__productos">
         
-        <h2> Productos:</h2>
+        <h2> Productos Disponibles:</h2>
         
         <section id="cards" class="productos"></section>
       </main>
