--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Item</th>
-                  <th scope="col">Cantidad</th>
+                  <th scope="col" class="cantidad-content"></th>
                   <th scope="col">Acción</th>
                   <th scope="col">Total</th>
                 </tr>
@@ -76,16 +76,20 @@
 
     <!--los template no los lee el html asi que pueden estar en cualquier lugar del documento-->
     <template id="template-footer">
-      <th scope="row" colspan="2">Total productos</th>
+      <th scope="row" colspan="2">Total</th>
       <td>10</td>
       <td>
         <button class="btn btn-info btn-sm" id="pagar-productos">
-          Pagar
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"/>
+            <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"/>
+          </svg>
         </button>
-      </td>
-      <td>
         <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-        Vaciar todo
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+          </svg>
         </button>
       </td>
       <td class="font-weight-bold">$ <span>5000</span></td>
@@ -99,8 +103,6 @@
           <button class="btn btn-info btn-sm">
           +
           </button>
-        </td>
-        <td>
           <button class="btn btn-danger btn-sm">
           -
           </button>
