--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link active" href="/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about.html">Acerca de Nosotros</a>
+                <a class="nav-link active" href="/about.html" target="_blank">Acerca de Nosotros</a>
               </li>
             </ul>
           </div>
