--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
   <body>
 
+
+
+
+
     <header class="cabezera">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -28,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -131,7 +135,7 @@
           <div class="card-body">
             <h5>Titulo</h5>
             <p>precio</p>
-            <button class="btn btn-dark">Comprar</button>
+            <button id="comp1" class="btn btn-dark">Comprar</button>
           </div>
         </div>
       </div>
@@ -180,6 +184,8 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Lucas Quiroga</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Wilhelm Castro</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Jose Fuentes</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Willy C. Villaorduña</a></li>
+
           </ul>
         </div>
       </footer>
